# sai-sujet7

./: .gitignore  playground.ipynb  pyproject.toml
bdrpca/: __init__.py  drpca.py  rpca.py  utils.py
